--- a/spring1025_AopLogin/.project
+++ b/spring1025_AopLogin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>spring1025_AopLogin</name>
+	<name>spring1025_26AopLoginSocket</name>
 	<comment></comment>
 	<projects>
 	</projects>
